--- a/index.html
+++ b/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>개발자 어벤져스</title>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- 부트스트랩 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Asta+Sans:wght@300..800&display=swap');
+
+        * {
+            font-family: "Noto Sans KR", sans-serif;
+        }
+
+        .body1 {
+            background-color: beige;
+            height: 450px;
+            margin: 5px 10px;
+            padding-left: 50px;
+            border-radius: 15px;
+        }
+
+        .mybtn1 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: right;
+        }
+
+        .postingbox {
+            width: 500px;
+            margin: 30px auto;
+            padding: 20px;
+            box-shadow: 0px 0px 3px 0px gray;
+            border-radius: 5px;
+        }
+
+        .mybtn2 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .mybtn2 > button{
+            width: 50%;
+        }
+
+    </style>
+
+    <script>
+        function openclose() {
+            $('.postingbox').toggle();
+        }
+    </script>
 </head>
+
 <body>
-    
+
 </body>
     <div>개벤져스</div>
+
+    <div class="body1">
+        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">개발자 어벤져스</h1>
+                <p class="col-md-8 fs-4">
+                    - 목표: 낙오 없이 팀원 모두 100% 수료하기!!
+                    <br>- 규칙 1: 무지각 도전
+                    <br>- 규칙 2: 모르는게 있으면 바로바로 물어보기
+                    <br>- 규칙 3: 팀원 간 커뮤니케이션 활발하게 하기
+                    <br>- 규칙 4: 하루 10시간은 공부에 집중하기
+                </p>
+                <div class="mybtn1"  onclick="openclose()">
+                    <button class="btn btn-outline-danger btn-lg" type="button">기록하기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="postingbox" style="display: none;">
+        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="앨범 이미지">
+            <label for="floatingInput">사진 이미지</label>
+        </div>
+            <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="앨범 이미지">
+            <label for="floatingInput">이름</label>
+        </div>        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="앨범 이미지">
+            <label for="floatingInput">설명</label>
+        </div>
+        <div class="mybtn2">
+            <button type="button" class="btn btn-warning">기록하기</button>
+        </div>
+    </div>
 </html>
