--- a/index.html
+++ b/index.html
@@ -18,11 +18,86 @@
             font-family: "Noto Sans KR", sans-serif;
         }
 
+        header {
+            position: relative;
+            background-color: skyblue;
+            min-height: 120px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-image: url(https://cdn.shopify.com/s/files/1/0841/2764/5718/articles/best_20image_20size_20for_20website.jpg?v=1730857249&originalWidth=1848&originalHeight=782&width=1800);
+            background-size: cover;
+            background-position: center;
+        }
+
+        .header-title {
+            font-size: 48px;
+            font-weight: bold;
+            color: #0a0303;
+            text-align: center;
+        }
+
+        .menu-wrapper {
+            position: absolute;
+            right: 20px;
+            top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
+
+        .menu-button {
+            width: 50px;
+            height: 50px;
+            border: none;
+            border-radius: 8px;
+            background-color: white;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+        }
+
+        .menu-button img {
+            width: 28px;
+            height: 28px;
+        }
+
+        .menu-list {
+            display: none;
+            flex-direction: column;
+            margin-top: 5px;
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            width: 150px;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .menu-list button {
+            background: none;
+            border: none;
+            padding: 10px;
+            text-align: left;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .menu-list button:hover {
+            background-color: #f0f0f0;
+        }
+
         .body1 {
-            background-color: beige;
+            background-color: #f7eaff;
             height: 450px;
-            margin: 5px 10px;
+            margin: 30px;
             padding-left: 50px;
+            box-shadow: 0px 0px 3px 0px gray;
             border-radius: 15px;
         }
 
@@ -48,10 +123,42 @@
             justify-content: center;
         }
 
-        .mybtn2 > button{
+        .mybtn2>button {
             width: 50%;
         }
 
+        footer {
+            background-color: #fbfbfb;
+            padding: 0.7px;
+            margin: 0.5px 0px 30px;
+        }
+
+        .footer-container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 0.1px;
+            /*죄우 이동*/
+            padding-left: 10px;
+            /*오른쪽 이동*/
+        }
+
+        .footer-row {
+            display: flex;
+            gap: 1.0rem;
+            /*위아래 사이 간격*/
+            padding: 0.5px;
+            /* 줄 긴격*/
+            margin: 0;
+        }
+
+        .footer-name,
+        .footer-email,
+        .footer-velog {
+            font: size 1px;
+            color: black;
+            line-height: 1.4;
+            word-break: break-all;
+        }
     </style>
 
     <script>
@@ -62,9 +169,37 @@
 </head>
 
 <body>
+    <header>
+        <div class="header-title">개벤져스</div>
 
-</body>
-    <div>개벤져스</div>
+        <div class="menu-wrapper">
+            <button class="menu-button" id="menuButton">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/375px-Hamburger_icon.svg.png"
+                    alt="메뉴">
+            </button>
+            <div class="menu-list" id="menuList">
+                <button>홈</button>
+                <button>소개</button>
+                <button>프로젝트</button>
+                <button>문의</button>
+            </div>
+        </div>
+    </header>
+
+    <script>
+        const menuButton = document.getElementById('menuButton');
+        const menuList = document.getElementById('menuList');
+
+        menuButton.addEventListener('click', (e) => {
+            e.stopPropagation();
+            menuList.style.display = menuList.style.display === 'flex' ? 'none' : 'flex';
+            menuList.style.flexDirection = 'column';
+        });
+
+        document.addEventListener('click', () => {
+            menuList.style.display = 'none';
+        });
+    </script>
 
     <div class="body1">
         <div class="p-5 mb-4 bg-body-tertiary rounded-3">
@@ -77,8 +212,8 @@
                     <br>- 규칙 3: 팀원 간 커뮤니케이션 활발하게 하기
                     <br>- 규칙 4: 하루 10시간은 공부에 집중하기
                 </p>
-                <div class="mybtn1"  onclick="openclose()">
-                    <button class="btn btn-outline-danger btn-lg" type="button">기록하기</button>
+                <div class="mybtn1" onclick="openclose()">
+                    <button class="btn btn-outline-danger btn-lg" type="button">팀원 추가</button>
                 </div>
             </div>
         </div>
@@ -89,10 +224,11 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="앨범 이미지">
             <label for="floatingInput">사진 이미지</label>
         </div>
-            <div class="form-floating mb-3">
+        <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="앨범 이미지">
             <label for="floatingInput">이름</label>
-        </div>        <div class="form-floating mb-3">
+        </div>
+        <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="앨범 이미지">
             <label for="floatingInput">설명</label>
         </div>
@@ -100,4 +236,31 @@
             <button type="button" class="btn btn-warning">기록하기</button>
         </div>
     </div>
+    
+    <footer>
+        <div class="footer-container">
+            <div class="footer-row">
+                <span class="footer-name">이청운</span>
+                <span class="footer-email">dlcjddns22@gmail.com</span>
+                <span class="footer-velog">https://velog.io/@dlcjddns22/posts</span>
+            </div>
+            <div class="footer-row">
+                <span class="footer-name">권민서</span>
+                <span class="footer-email">kms141516@gmail.com</span>
+                <span class="footer-velog">https://velog.io/@minss_22/posts</span>
+            </div>
+            <div class="footer-row">
+                <span class="footer-name">이름</span>
+                <span class="footer-email">이메일</span>
+                <span class="footer-velog">블로그 주소</span>
+            </div>
+            <div class="footer-row">
+                <span class="footer-name">이름</span>
+                <span class="footer-email">이메일</span>
+                <span class="footer-velog">블로그 주소</span>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
