--- a/basic.html
+++ b/basic.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>민서 페이지</title>
+    <title>개인 페이지</title>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- 부트스트랩 -->
@@ -33,6 +33,8 @@
         }
 
         .picture>img {
+            min-width: 400px;
+            min-height: 300px;
             width: 400px;
             height: 300px;
             object-fit: cover;
@@ -57,6 +59,7 @@
         }
 
         main>div {
+            min-height: 300px;
             margin: 50px auto;
             width: 70%;
         }
@@ -116,7 +119,7 @@
                     'createdAt': serverTimestamp() // 저장한 시간 기록
                 }
 
-                const adddoc = await addDoc(collection(db, "comments"), doc); // 서버에 저장
+                const adddoc = await addDoc(collection(db, "basic"), doc); // 서버에 저장
 
                 let temp_html = `
                     <div id="${adddoc.id}"> 
@@ -132,12 +135,12 @@
 
         $(document).on("click", ".delbtn", async function () { // 댓글 삭제 기능
             const id = $(this).parent().attr("id");  // 부모의 id
-            await deleteDoc(doc(db, "comments", id));  // firebase에서 문서 삭제
+            await deleteDoc(doc(db, "basic", id));  // firebase에서 문서 삭제
             $(this).parent().remove(); // 화면에서도 삭제
         });
 
         const q = query(
-            collection(db, "comments"),
+            collection(db, "basic"),
             orderBy("createdAt", "asc") // 저장한 순서대로 정렬
         );
 
@@ -160,14 +163,13 @@
 <body class="bg-light">
     <header>
         <div class="picture">
-            <img src="https://teamsparta.notion.site/image/attachment%3Afa1e49af-5932-4587-89f8-9be011c3443a%3A%EC%82%AC%EC%A7%84.jpg?table=block&id=2702dc3e-f514-8186-a638-c337a65d6f52&spaceId=83c75a39-3aba-4ba4-a792-7aefe4b07895&width=1420&userId=&cache=v2"
-                alt="사진">
+            <img src="" alt="사진" >
         </div>
         <div class="intro">
-            <h1 class="card-title name">권민서</h1>
-            <p class="card-text">MBTI: ISFJ</p>
-            <p class="card-text">이메일: kms141516@gmail.com</p>
-            <p class="card-text">블로그: https://velog.io/@minss_22/posts</p>
+            <h1 class="card-title name"></h1>
+            <p class="card-text"></p>
+            <p class="card-text"></p>
+            <p class="card-text"></p>
         </div>
         <button type="button" class="btn btn-outline-info mdfbtn">수정</button>
     </header>
@@ -175,20 +177,6 @@
     <hr style="width: 90%; margin: 0px auto;" />
     <main>
         <div>
-            <h2>👩‍💻자기소개</h2><br>
-            안녕하세요! 대구 살고있는 27살 권민서입니다.<br><br>
-            휴학 기간 2년동안 사무 보조로 회사 생활을 하다가, 팀에 필요한 시스템을 직접 기획 및 개발하는 경험을 해보면서 개발자를 꿈꾸게 되었습니다.<br>
-            하지만 아직은 개발자가 되기 위한 역량이 부족하다 생각합니다.<br>
-            이제 내일배움캠프를 통해서 스스로 학습의 주체가 되어 실력을 갈고 닦아 경쟁력있는 개발자로 성장하겠습니다.<br><br>
-            잘 부탁드립니다!<br><br><br>
-
-            <h3>🔍취미</h3><br>
-            ⚾ 야구 좋아합니다!<br>
-            저는 대구사람이기 때문에 삼성 라이온즈 좋아합니다..😳<br><br>
-            ✈️ 여행 좋아합니다!<br>
-            회사 다니면서 모은 돈으로 복학 후 방학 때 유럽 한달 여행했었습니다.<br><br>
-            🖌️ 그림 그리는 거 좋아합니다!<br>
-            좋아하는 인물 따라 그리는 거 좋아합니다.<br><br>
         </div>
     </main>
     <hr style="width: 90%; margin: 0px auto;" />
