--- a/minseo.html
+++ b/minseo.html
@@ -150,7 +150,7 @@
             let temp_html = `           
                 <div id="${id}"> 
                     <span>${comment}</span>
-                    <button type="button" class="btn btn-outline-secondary delbtn">삭제</button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm delbtn">삭제</button>
                 </div>`;
             $("#comments").append(temp_html);
         });
