--- a/index_서버세팅_완.html
+++ b/index_서버세팅_완.html
@@ -142,7 +142,6 @@
     }
 
     footer {
-      background-color: #fbfbfb;
       padding: 20px 0;
       margin: 0.5px 0px 30px;
     }
@@ -158,7 +157,7 @@
       display: flex;
       gap: 1.0rem;
       padding: 0.5px;
-      margin: 0;
+      margin: 5px;
     }
 
     .footer-name,
@@ -170,6 +169,13 @@
       word-break: break-all;
     }
 
+    .footer-name {
+      width: 100px;
+    }
+
+    .footer-email{
+      width: 200px;
+    }
     .team-member-container {
       max-width: 960px;
       margin: 0 auto;
@@ -548,17 +554,17 @@
       <div class="footer-row">
         <span class="footer-name">이청운</span>
         <span class="footer-email">dlcjddns22@gmail.com</span>
-        <a href="https://kingkdb.tistory.com/" class="footer-velog foot-href-bar">https://kingkdb.tistory.com/</a>
+        <a href="https://velog.io/@dlcjddns22/posts" class="footer-velog foot-href-bar">https://velog.io/@dlcjddns22/posts</a>
       </div>
       <div class="footer-row">
         <span class="footer-name">권민서</span>
         <span class="footer-email">kms141516@gmail.com</span>
-        <a href="https://kingkdb.tistory.com/" class="footer-velog foot-href-bar">https://kingkdb.tistory.com/</a>
+        <a href="https://velog.io/@minss_22/posts" class="footer-velog foot-href-bar">https://velog.io/@minss_22/posts</a>
       </div>
       <div class="footer-row">
         <span class="footer-name">신호준</span>
         <span class="footer-email">hosujjing@gmail.com</span>
-        <a href="https://kingkdb.tistory.com/" class="footer-velog foot-href-bar">https://kingkdb.tistory.com/</a>
+        <a href="https://yoj21.tistory.com/" class="footer-velog foot-href-bar">https://yoj21.tistory.com/</a>
       </div>
       <div class="footer-row">
         <span class="footer-name">고아람</span>
