--- a/minseo.html
+++ b/minseo.html
@@ -70,20 +70,25 @@
             margin-top: 5px;
         }
 
-        #comments {
-            padding: 15px 5px;
-        }
-
-        #comments>div {
-            width: 95%;
-            margin: 5px auto;
+        .visible {
+            margin: 3px 0px;
+            padding: 10px 15px;
             display: flex;
             flex-direction: row;
             align-items: center;
         }
 
-        .delbtn {
+        .appendbtn {
             margin: auto 0px auto auto;
+        }
+
+        .edit {
+            width: 97%;
+            margin: auto;
+        }
+
+        .cmtbox {
+            margin: 5px auto;
         }
     </style>
 
@@ -91,8 +96,8 @@
         // Firebase SDK 라이브러리 가져오기
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
         import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { collection, addDoc, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { query, orderBy, serverTimestamp, doc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { collection, addDoc, getDocs, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { query, orderBy, serverTimestamp, doc as firestoreDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
         // Firebase 구성 정보 설정
         const firebaseConfig = {
@@ -108,8 +113,27 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        $("#cmtbtn").click(async function () { // 댓글 작성 기능
-            let comment = $("#comment").val();
+        function html(id, cmt) { // 댓글 html
+            let temp_html = `
+                <div id="${id}" class="card cmtbox"> 
+                    <div class="visible">
+                        <span class="cmt">${cmt}</span>
+                        <div class="appendbtn">
+                            <button type="button" class="btn btn-outline-info btn-sm editbtn">수정</button>
+                            <button type="button" class="btn btn-outline-secondary btn-sm delbtn">삭제</button>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3 edit" style="display: none;">
+                        <input type="text" class="form-control" placeholder="댓글을 수정해주세요" aria-label="댓글을 수정해주세요">
+                        <button class="btn btn-outline-secondary savebtn" type="button">저장</button>
+                    </div>
+                </div>`;
+            return temp_html;
+        }
+
+        /* 댓글 작성 기능 */
+        $("#cmtbtn").click(async function () {
+            let comment = $("#writecmt").val();
             if (comment) { // 작성한 댓글이 있으면
                 let doc = {
                     'comment': comment,
@@ -118,22 +142,38 @@
 
                 const docRef = await addDoc(collection(db, "comments"), doc); // 서버에 저장
 
-                let temp_html = `
-                    <div id="${docRef.id}"> 
-                        <span>${comment}</span>
-                        <button type="button" class="btn btn-outline-secondary btn-sm delbtn">삭제</button>
-                    </div>`;
-                $("#comments").append(temp_html);
-                $("#comment").val(""); // 입력창 비움
+                let temp_html = html(docRef.id, comment);
+                $(".mycomment").append(temp_html); // 화면에서도 추가
+                $("#writecmt").val(""); // 입력창 비움
 
                 $(window).scrollTop($(document).height()); // 스크롤 맨 밑으로
             }
         })
 
-        $(document).on("click", ".delbtn", async function () { // 댓글 삭제 기능
-            const id = $(this).parent().attr("id");  // 부모의 id
-            await deleteDoc(doc(db, "comments", id));  // firebase에서 문서 삭제
-            $(this).parent().remove(); // 화면에서도 삭제
+        /* 댓글 삭제 기능 */
+        $(document).on("click", ".delbtn", async function () {
+            let area = $(this).closest(".cmtbox"); // 삭제할 구역
+            let id = area.attr("id");  // id값 = 문서 iD
+            await deleteDoc(firestoreDoc(db, "comments", id));  // firebase에서 문서 삭제
+            area.remove(); // 화면에서도 삭제
+        });
+
+        /* 댓글 수정 기능 */
+        $(document).on("click", ".editbtn", async function () {
+            $(this).closest(".cmtbox").children('.edit').toggle();
+        });
+        $(document).on("click", ".savebtn", async function () {
+            let new_cmt = $(this).prev().val();
+            let area = $(this).closest(".cmtbox").find(".cmt");
+            let id = $(this).closest(".cmtbox").attr("id");  // id값 = 문서 iD
+
+            if (new_cmt) {
+                await updateDoc(firestoreDoc(db, "comments", id), {'comment': new_cmt});  // firebase에서 문서 수정
+
+                area.text(new_cmt); // 화면에서도 수정
+                $(this).prev().val(""); // 입력창 비움
+                $(this).closest(".cmtbox").children('.edit').toggle();
+            }
         });
 
         const q = query(
@@ -147,12 +187,8 @@
             let row = doc.data();
             let comment = row['comment'];
 
-            let temp_html = `
-                <div id="${id}"> 
-                    <span>${comment}</span>
-                    <button type="button" class="btn btn-outline-secondary btn-sm delbtn">삭제</button>
-                </div>`;
-            $("#comments").append(temp_html);
+            let temp_html = html(id, comment);
+            $(".mycomment").append(temp_html);
         });
     </script>
 </head>
@@ -195,12 +231,13 @@
 
     <footer>
         <div class="mycomment">
-            <div class="card my-4">
+            <!-- 댓글 작성하는 구역 -->
+            <div class="card my-3">
                 <h5 class="card-header">댓글</h5>
                 <div class="card-body">
                     <form>
                         <div class="form-group">
-                            <textarea id="comment" class="form-control" rows="3"></textarea>
+                            <textarea id="writecmt" class="form-control" rows="3" placeholder="댓글을 작성해주세요"></textarea>
                         </div>
                         <div class="d-flex justify-content-end">
                             <button id="cmtbtn" type="button" class="btn btn-outline-primary">댓글 작성</button>
@@ -208,8 +245,7 @@
                     </form>
                 </div>
             </div>
-            <div id="comments" class="card my-4">
-            </div>
+            <!-- 댓글 달리는 구역 -->
         </div>
     </footer>
 </body>
