--- a/minseo.html
+++ b/minseo.html
@@ -52,7 +52,7 @@
             margin-left: 10px;
         }
 
-        .mdfbtn {
+        .createbtn {
             margin: 0px 0px auto auto;
         }
 
@@ -205,7 +205,7 @@
             <p class="card-text">이메일: kms141516@gmail.com</p>
             <p class="card-text">블로그: https://velog.io/@minss_22/posts</p>
         </div>
-        <button type="button" class="btn btn-outline-info mdfbtn">수정</button>
+        <button type="button" class="btn btn-outline-dark createbtn">작성하기</button>
     </header>
 
     <hr style="width: 90%; margin: 0px auto;" />
