--- a/page.html
+++ b/page.html
@@ -24,6 +24,14 @@
             border-radius: 6px;
         }
 
+        .edit-btn {
+            background-color: transparent;
+            color: #0c70f2;
+            border: 1px solid #0c70f2;
+            border-radius: 6px;
+            width: 30px;
+        }
+
         .mytitle button {
             position: absolute;
             right: 20px;
@@ -99,7 +107,6 @@
         import { deleteDoc, doc, updateDoc, query, orderBy, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
 
-
         // Firebase 구성 정보 설정
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
@@ -115,7 +122,7 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         //데이터추가 스켈레톤
-        $("#makecard").click(async function () {
+        $("#savecard").click(async function () {
             let image = $('#image').val();
             let title = $('#title').val();
             let story = $('#story').val();
@@ -133,17 +140,39 @@
             $('#card').append(temp_html);
 
             //객체 
-            let makecard = {
+            let cardList = {
                 'image': image,
                 'title': title,
                 'story': story
             }
-            await addDoc(collection(db, "Team1_project"), makecard);
+            await addDoc(collection(db, "Team1_project_1"), cardList);
             alert('저장 완료!');
 
             //5. 새로고침
             window.location.reload();
         });
+        // 이미지 카드 불러오기
+        let docs = await getDocs(collection(db, "Team1_project_1"));
+        docs.forEach((makeList) => {
+            let row = makeList.data();
+            let image = row['image'];
+            let title = row['title'];
+            let story = row['story'];
+
+            let temp_html = `<div class="col">
+                <div class="card">
+                    <img src="${image}"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">${title}</h5>
+                        <p class="card-text">${story}</p>
+                    </div>
+                </div>
+            </div>`;
+            $('#card').append(temp_html);
+        });
+
+
         //입력박스 토글
         $("#writebtn").click(async function () {
             $('#tbox').toggle()
@@ -179,7 +208,7 @@
             window.location.reload();
         });
 
-        
+
         const colle = collection(db, "Team1_project");
 
         const querySnapshot = await getDocs(colle);
@@ -237,7 +266,6 @@
             });
         });
 
-
     </script>
 </head>
 
@@ -272,7 +300,7 @@
         </div>
 
         <div>
-            <button id="makecard">저장하기</button>
+            <button id="savecard">저장하기</button>
         </div>
 
     </div>
@@ -291,6 +319,7 @@
                         <p class="card-text">MBTI: ISFP</p>
                         <p class="card-text">취미: 운동 </p>
                     </div>
+                    <!-- <button class edit-btn> 수정 </button> -->
                 </div>
             </div>
 
@@ -347,12 +376,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
             </div>
 
 
@@ -369,7 +392,7 @@
                             <option selected>반응하기</option>
                             <option value="좋다!!">좋다!!</option>
                             <option value="멋지다!!">멋지다!!</option>
-                            <option value="놀라워!!">놀라워!!</option>
+                            <option value="화이팅!!">화이팅!!</option>
                             <option value="👍🏻👍🏻👍🏻">👍🏻👍🏻👍🏻</option>
                         </select>
                     </div>
