--- a/main.html
+++ b/main.html
@@ -477,7 +477,7 @@
       <button type="button" class="btn btn-outline-danger delbtn">삭제</button>
     </div>
     <div class="cardbox">
-      <a href="Personal_lee_page.html" style="display:block; text-decoration:none; color:inherit;">
+      <a href="page.html" style="display:block; text-decoration:none; color:inherit;">
         <div class="team-member-row">
           <!-- 왼쪽 박스 -->
           <div class="border">
