--- a/page.html
+++ b/page.html
@@ -311,7 +311,7 @@
         <div id="card" class="row row-cols-1 row-cols-md-3 g-4 justifly-content-center">
             <div class="col">
                 <div class="card">
-                    <img src="/Users/icheong-un/Downloads/509.JPG" class="card-img-top" alt="...">
+                    <img src="https://github.com/Leechungwoon/2025_09_29_git_test/blob/master/509.JPG?raw=true" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">자기소개</h5>
                         <p class="card-text">이름: 이청운</p>
@@ -325,12 +325,12 @@
 
             <div class="col">
                 <div class="card">
-                    <img src="/Users/icheong-un/Downloads/IMG_3759.jpg" class="card-img-top" alt="...">
-                    <img src="/Users/icheong-un/Downloads/IMG_7814.JPG" class="card-img-top" alt="...">
+                    <img src="https://github.com/Leechungwoon/2025_09_29_git_test/blob/master/IMG_3759.jpg?raw=true" alt="...">
+                    <img src="https://github.com/Leechungwoon/2025_09_29_git_test/blob/master/IMG_7814.JPG?raw=true" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">좋아하는 것</h5>
-                        <p class="card-text">제가 좋아하는 것은 운동입니다! 운동을 좋아해서 스트레스를 풀거나 여가 생활이 있으면 항상 운동합니다! 여행도 좋아하는데 여행사진도
-                            죄다 운동 사진이라 조심스럽게 올려봅니다!</p>
+                        <p class="card-text">제가 좋아하는 것은 운동입니다! 운동을 좋아해서 스트레스를 풀거나 여가 생활이 있으면 항상 운동합니다!
+                            전부 운동 사진이라 조심스럽게 올려봅니다!</p>
                     </div>
                 </div>
             </div>
@@ -341,7 +341,7 @@
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">다짐</h5>
-                        <p class="card-text">잘 부탁드립니다!!</p>
+                        <p class="card-text">함께 하게 돼서 감사한 마음과 함께 앞으로 잘 부탁드립니다!!</p>
                     </div>
                 </div>
             </div>
