--- a/Jun_home_html.html
+++ b/Jun_home_html.html
@@ -269,7 +269,7 @@
                     </p>
                 </div>
                 <div class="col-md-5">
-                    <img class="se-pho-size padding" src="new\rucidd.jpg" arg="">
+                    <img class="se-pho-size padding" src="https://github.com/koyra7/Html/blob/main/rucidd.jpg?raw=true" arg="">
                 </div>
             </div>
             <hr class="featurette-divider">
@@ -293,7 +293,7 @@
                     </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img class="se-pho-size padding" src="new\jp.jpg" arg="">
+                    <img class="se-pho-size padding" src="https://github.com/koyra7/Html/blob/main/jp.jpg?raw=true" arg="">
                 </div>
             </div>
             <hr class="featurette-divider">
@@ -319,7 +319,7 @@
                     </p>
                 </div>
                 <div class="col-md-5">
-                    <img class="se-pho-size" src="new\yoroming.jpg" arg="">
+                    <img class="se-pho-size" src="https://github.com/koyra7/Html/blob/main/yoroming.jpg?raw=true" arg="">
                 </div>
             </div>
             <hr class="featurette-divider"> <!-- /END THE FEATURETTES -->
