--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
           - 규칙 4: 하루 10시간은 공부에 집중하기
         </p>
       </div>
-      <div class="mybtn1" onclick="openclose()">
-        <button class="btn btn-outline-light btn-lg" type="button">팀원 추가</button>
+      <div class="mybtn1">
+        <button  onclick="openclose()" class="btn btn-outline-light btn-lg" type="button">팀원 추가</button>
       </div>
     </div>
   </div>
